crates/safix/src/snapshots/safix__reporter__tests__plain-prompt_unanswered.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: prompt 'seed' was answered with nothing; refusing to generate from an empty input
