crates/safix/src/snapshots/safix__reporter__tests__plain-pty_unusable.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: could not drive a pseudo-terminal, so the generator's PIN prompt was not reached
