crates/safix/src/snapshots/safix__reporter__tests__plain-public_not_editable.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: 'wg-public' is a public output, so its value is already plaintext at public/safix/users/alice/wg-public/value; there is nothing to decrypt and nothing to encrypt.

A public output is minted by the generator that declares it. Re-run `safix generate` to replace it, or edit public/safix/users/alice/wg-public/value directly — it is an ordinary file in the repository, which is what declaring it `secret = false` means.
