crates/safix/src/snapshots/safix__reporter__tests__plain-recipients_unreadable.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: could not read the recipients of secrets/safix/users/alice/secrets.yaml
