crates/safix/src/snapshots/safix__reporter__tests__plain-rewrap_unschedulable.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: a governed file's re-wrap could not be run: task panicked
