crates/safix/src/snapshots/safix__reporter__tests__plain-sandbox_unavailable.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: bwrap is not available, so no generator ran.

A generator's script and its validation fragments run inside a sandbox:
the staging root is the only writable path, the nix store is read-only,
and there is no network.

safix resolves it out of nixpkgs at spawn time, the way it resolves a
generator's runtimeInputs, so this is not a package to install: it is a
machine that will not run it. An unprivileged user namespace being
disabled is what that usually is.

There is no flag that runs a generator outside the envelope.
